--- a/licensemanager/mix/contracts.html
+++ b/licensemanager/mix/contracts.html
@@ -18,12 +18,6 @@ function LicenseManager_changePaymentAddress_address() {
 	var param__newPaymentAdress = document.getElementById('LicenseManager_changePaymentAddress_address__newPaymentAdress').value;
 	var res = contracts['LicenseManager'].contract.changePaymentAddress(param__newPaymentAdress);
 }
-//function LicenseManager_changePaymentAddress
-function LicenseManager_changePaymentAddress_address_uint() {
-	var param__newPaymentAddress = document.getElementById('LicenseManager_changePaymentAddress_address_uint__newPaymentAddress').value;
-	var param_licenseId = document.getElementById('LicenseManager_changePaymentAddress_address_uint_licenseId').value;
-	var res = contracts['LicenseManager'].contract.changePaymentAddress(param__newPaymentAddress, param_licenseId);
-}
 //function LicenseManager_createIssuerContract
 function LicenseManager_createIssuerContract_string_string_string_uint_uint() {
 	var param_itemName = document.getElementById('LicenseManager_createIssuerContract_string_string_string_uint_uint_itemName').value;
@@ -37,6 +31,12 @@ function LicenseManager_createIssuerContract_string_string_string_uint_uint() {
 function LicenseManager_stopIssuing_uint() {
 	var param_licenseId = document.getElementById('LicenseManager_stopIssuing_uint_licenseId').value;
 	var res = contracts['LicenseManager'].contract.stopIssuing(param_licenseId);
+}
+//function LicenseManager_changePaymentAddress
+function LicenseManager_changePaymentAddress_address_uint() {
+	var param__newPaymentAddress = document.getElementById('LicenseManager_changePaymentAddress_address_uint__newPaymentAddress').value;
+	var param_licenseId = document.getElementById('LicenseManager_changePaymentAddress_address_uint_licenseId').value;
+	var res = contracts['LicenseManager'].contract.changePaymentAddress(param__newPaymentAddress, param_licenseId);
 }
 
 //delegated calls
@@ -66,10 +66,19 @@ var issuable_res = contracts['LicenseIssuer'].contract.issuable();
 		document.getElementById('LicenseIssuer_issuable_value').innerText = issuable_res;
 }
 //call functions
-//function LicenseIssuer_changePaymentAddress
-function LicenseIssuer_changePaymentAddress_address() {
-	var param__newPaymentAddress = document.getElementById('LicenseIssuer_changePaymentAddress_address__newPaymentAddress').value;
-	var res = contracts['LicenseIssuer'].contract.changePaymentAddress(param__newPaymentAddress);
+//function LicenseIssuer_stopIssuing
+function LicenseIssuer_stopIssuing() {
+	var res = contracts['LicenseIssuer'].contract.stopIssuing();
+}
+//function LicenseIssuer_checkLicense
+function LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32() {
+	var param_factHash = document.getElementById('LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_factHash').value;
+	var param_v = document.getElementById('LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_v').value;
+	var param_sig_r = document.getElementById('LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_sig_r').value;
+	var param_sig_s = document.getElementById('LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_sig_s').value;
+	var res = contracts['LicenseIssuer'].contract.checkLicense(param_factHash, param_v, param_sig_r, param_sig_s);
+	if(res!=null)
+		document.getElementById('LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_res').innerText = res;
 }
 //function LicenseIssuer_checkLicense
 function LicenseIssuer_checkLicense_address() {
@@ -78,15 +87,16 @@ function LicenseIssuer_checkLicense_address() {
 	if(res!=null)
 		document.getElementById('LicenseIssuer_checkLicense_address_res').innerText = res;
 }
+//function LicenseIssuer_changePaymentAddress
+function LicenseIssuer_changePaymentAddress_address() {
+	var param__newPaymentAddress = document.getElementById('LicenseIssuer_changePaymentAddress_address__newPaymentAddress').value;
+	var res = contracts['LicenseIssuer'].contract.changePaymentAddress(param__newPaymentAddress);
+}
 //function LicenseIssuer_buyLicense
 function LicenseIssuer_buyLicense_address_string() {
 	var param__address = document.getElementById('LicenseIssuer_buyLicense_address_string__address').value;
 	var param__name = document.getElementById('LicenseIssuer_buyLicense_address_string__name').value;
 	var res = contracts['LicenseIssuer'].contract.buyLicense(param__address, param__name);
-}
-//function LicenseIssuer_stopIssuing
-function LicenseIssuer_stopIssuing() {
-	var res = contracts['LicenseIssuer'].contract.stopIssuing();
 }
 
 //delegated calls
@@ -124,13 +134,6 @@ LicenseManager_changePaymentAddress:
 	<div class="function_result" id="LicenseManager_changePaymentAddress_address_res"></div>
   </div>
   <div class="function_execution">
-LicenseManager_changePaymentAddress:
-	<input type='text' id='LicenseManager_changePaymentAddress_address_uint__newPaymentAddress'>
-	<input type='text' id='LicenseManager_changePaymentAddress_address_uint_licenseId'>
-	<button onclick='LicenseManager_changePaymentAddress_address_uint()'>execute LicenseManager_changePaymentAddress</button>
-	<div class="function_result" id="LicenseManager_changePaymentAddress_address_uint_res"></div>
-  </div>
-  <div class="function_execution">
 LicenseManager_createIssuerContract:
 	<input type='text' id='LicenseManager_createIssuerContract_string_string_string_uint_uint_itemName'>
 	<input type='text' id='LicenseManager_createIssuerContract_string_string_string_uint_uint_textHash'>
@@ -145,6 +148,13 @@ LicenseManager_stopIssuing:
 	<input type='text' id='LicenseManager_stopIssuing_uint_licenseId'>
 	<button onclick='LicenseManager_stopIssuing_uint()'>execute LicenseManager_stopIssuing</button>
 	<div class="function_result" id="LicenseManager_stopIssuing_uint_res"></div>
+  </div>
+  <div class="function_execution">
+LicenseManager_changePaymentAddress:
+	<input type='text' id='LicenseManager_changePaymentAddress_address_uint__newPaymentAddress'>
+	<input type='text' id='LicenseManager_changePaymentAddress_address_uint_licenseId'>
+	<button onclick='LicenseManager_changePaymentAddress_address_uint()'>execute LicenseManager_changePaymentAddress</button>
+	<div class="function_result" id="LicenseManager_changePaymentAddress_address_uint_res"></div>
   </div>
 
 </div>
@@ -176,10 +186,18 @@ LicenseIssuer:
   </div>
 
   <div class="function_execution">
-LicenseIssuer_changePaymentAddress:
-	<input type='text' id='LicenseIssuer_changePaymentAddress_address__newPaymentAddress'>
-	<button onclick='LicenseIssuer_changePaymentAddress_address()'>execute LicenseIssuer_changePaymentAddress</button>
-	<div class="function_result" id="LicenseIssuer_changePaymentAddress_address_res"></div>
+LicenseIssuer_stopIssuing:
+	<button onclick='LicenseIssuer_stopIssuing()'>execute LicenseIssuer_stopIssuing</button>
+	<div class="function_result" id="LicenseIssuer_stopIssuing_res"></div>
+  </div>
+  <div class="function_execution">
+LicenseIssuer_checkLicense:
+	<input type='text' id='LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_factHash'>
+	<input type='text' id='LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_v'>
+	<input type='text' id='LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_sig_r'>
+	<input type='text' id='LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_sig_s'>
+	<button onclick='LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32()'>execute LicenseIssuer_checkLicense</button>
+	<div class="function_result" id="LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_res"></div>
   </div>
   <div class="function_execution">
 LicenseIssuer_checkLicense:
@@ -188,16 +206,17 @@ LicenseIssuer_checkLicense:
 	<div class="function_result" id="LicenseIssuer_checkLicense_address_res"></div>
   </div>
   <div class="function_execution">
+LicenseIssuer_changePaymentAddress:
+	<input type='text' id='LicenseIssuer_changePaymentAddress_address__newPaymentAddress'>
+	<button onclick='LicenseIssuer_changePaymentAddress_address()'>execute LicenseIssuer_changePaymentAddress</button>
+	<div class="function_result" id="LicenseIssuer_changePaymentAddress_address_res"></div>
+  </div>
+  <div class="function_execution">
 LicenseIssuer_buyLicense:
 	<input type='text' id='LicenseIssuer_buyLicense_address_string__address'>
 	<input type='text' id='LicenseIssuer_buyLicense_address_string__name'>
 	<button onclick='LicenseIssuer_buyLicense_address_string()'>execute LicenseIssuer_buyLicense</button>
 	<div class="function_result" id="LicenseIssuer_buyLicense_address_string_res"></div>
-  </div>
-  <div class="function_execution">
-LicenseIssuer_stopIssuing:
-	<button onclick='LicenseIssuer_stopIssuing()'>execute LicenseIssuer_stopIssuing</button>
-	<div class="function_result" id="LicenseIssuer_stopIssuing_res"></div>
   </div>
 
 </div>
