--- a/licensemanager/mix/licenseIssuer.html
+++ b/licensemanager/mix/licenseIssuer.html
@@ -54,11 +54,23 @@
 }
 
 .function_parameter {
-
+	
 
 }
 
+.function_parameter_name{
+margin-top: 19px;
+}
+.function_button{
+margin-top: 10px;
+}
+
 .function_result {
+	
+}
+.simple_border {
+	border-style: solid;
+	border-width: 1px;
 	
 }
 </style>
@@ -214,32 +226,32 @@
 				return ''
 						+ '	  <div class="function_execution" id="'+prefix+'LicenseIssuer_contract_function_LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32">'
 						+ '	LicenseIssuer_checkLicense: '
-						+ '		  <div class="function_parameter row clear"><div class="col col-1-4">factHash</div>  <input class="col col-3-4"  type="text" id="'+prefix+'LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_factHash"/></div>'
-						+ '		  <div class="function_parameter row clear"><div class="col col-1-4">v</div>         <input class="col col-3-4" type="number" id="'+prefix+'LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_v"/></div>'
-						+ '		  <div class="function_parameter row clear"><div class="col col-1-4">sig_r</div>     <input class="col col-3-4" type="text" id="'+prefix+'LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_sig_r"/></div>'
-						+ '		  <div class="function_parameter row clear"><div class="col col-1-4">sig_s</div>     <input class="col col-3-4" type="text" id="'+prefix+'LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_sig_s"/></div>'
-						+ '		<button class="dapp-block-button" id="'
+						+ '		  <div class="function_parameter row clear "><div class="col col-1-4 function_parameter_name">factHash</div> <input class="col col-3-4"  type="text" id="'+prefix+'LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_factHash"/></div>'
+						+ '		  <div class="function_parameter row clear "><div class="col col-1-4 function_parameter_name">v</div>         <input class="col col-3-4" type="number" id="'+prefix+'LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_v"/></div>'
+						+ '		  <div class="function_parameter row clear "><div class="col col-1-4 function_parameter_name">sig_r</div>     <input class="col col-3-4" type="text" id="'+prefix+'LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_sig_r"/></div>'
+						+ '		  <div class="function_parameter row clear"><div class="col col-1-4 function_parameter_name">sig_s</div>     <input class="col col-3-4" type="text" id="'+prefix+'LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_sig_s"/></div>'
+						+ '		<button class="dapp-block-button function_button" id="'
 						+ prefix
 						+ 'LicenseIssuerController.LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32" onclick="'
-						+ 'checkLicense_bytes32_uint8_bytes32_bytes32('+index+',\''+prefix +'\')">checkLicense</button>'
+						+ 'checkLicense_bytes32_uint8_bytes32_bytes32('+index+',\''+prefix +'\')">check License</button>'
 						+ '		<div class="function_result" id="'+prefix+'LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_res"></div>'
 						+ '	  </div>'
 						+ '	  <div class="function_execution" id="'+prefix+'LicenseIssuer_contract_function_LicenseIssuer_checkLicense_address">'
 						+ '	LicenseIssuer_checkLicense:'
-						+ '		  <div class="function_parameter">_address<input class="dapp-address-input" type="text" id="'+prefix+'LicenseIssuer_checkLicense_address__address"></div>'
-						+ '		<button class="dapp-block-button"id="'
+						+ '		  <div class="function_parameter row clear "><div class="col col-1-4 function_parameter_name">address</div><input class="dapp-address-input col col-3-4" type="text" id="'+prefix+'LicenseIssuer_checkLicense_address__address"></div>'
+						+ '		<button class="dapp-block-button function_button"id="'
 						+ prefix
-						+ 'LicenseIssuerController.LicenseIssuer_checkLicense_address" onclick="checkLicense_address('+index+',\''+ prefix +'\' )">checkLicense</button>'
+						+ 'LicenseIssuerController.LicenseIssuer_checkLicense_address" onclick="checkLicense_address('+index+',\''+ prefix +'\' )">check License</button>'
 						+ '		<div class="function_result" id="'+prefix+'LicenseIssuer_checkLicense_address_res"></div>'
 						+ '	  </div>'
 						+ '	  <div class="function_execution" id="'+prefix+'LicenseIssuer_contract_function_LicenseIssuer_buyLicense_address_string">'
 						+ '	LicenseIssuer_buyLicense:'
-						+ '		  <div class="function_parameter">_address<input class="dapp-address-input" type="text" id="'+prefix+'LicenseIssuer_buyLicense_address_string__address"></div>'
-						+ '		  <div class="function_parameter">_name<input type="text" id="'+prefix+'LicenseIssuer_buyLicense_address_string__name"></div>'
-						+ '		<button class="dapp-block-button" id="'
+						+ '		  <div class="function_parameter row clear "><div class="col col-1-4 function_parameter_name">address</div><input class="dapp-address-input col col-3-4" type="text" id="'+prefix+'LicenseIssuer_buyLicense_address_string__address"></div>'
+						+ '		  <div class="function_parameter row clear "><div class="col col-1-4 function_parameter_name">name</div><input class="col col-3-4" type="text" id="'+prefix+'LicenseIssuer_buyLicense_address_string__name"></div>'
+						+ '		<button class="dapp-block-button function_button" id="'
 						+ prefix
 						+ 'LicenseIssuerController.LicenseIssuer_buyLicense_address_string" onclick="'
-						+ 'buyLicense('+index+',\''+prefix +'\')">buyLicense</button>'
+						+ 'buyLicense('+index+',\''+prefix +'\')">buy License</button>'
 						+ '		<div class="function_result" id="'+prefix+'LicenseIssuer_buyLicense_address_string_res"></div>'
 						+ '	  </div>';
 
@@ -248,18 +260,18 @@
 			this.managerActions = function(index,prefix) {
 				return '	  <div class="function_execution" id="'+prefix+'LicenseIssuer_contract_function_LicenseIssuer_changePaymentAddress_address">'
 						+ '	LicenseIssuer_changePaymentAddress:'
-						+ '		  <div class="function_parameter">_newPaymentAddress<input type="text" id="'+prefix+'LicenseIssuer_changePaymentAddress_address__newPaymentAddress"></div>'
-						+ '		<button class="dapp-block-button"id="'
+						+ '		  <div class="function_parameter row clear "><div class="col col-1-4 function_parameter_name">new payment address</div><input class="col col-3-4" type="text" id="'+prefix+'LicenseIssuer_changePaymentAddress_address__newPaymentAddress"></div>'
+						+ '		<button class="dapp-block-button function_button"id="'
 						+ prefix
-						+ 'LicenseIssuerController.LicenseIssuer_changePaymentAddress_address" onclick="changePaymentAddress('+index+',\''+prefix +'\')">changePaymentAddress</button>'
+						+ 'LicenseIssuerController.LicenseIssuer_changePaymentAddress_address" onclick="changePaymentAddress('+index+',\''+prefix +'\')">change Payment Address</button>'
 						+ '		<div class="function_result" id="'+prefix+'LicenseIssuer_changePaymentAddress_address_res"></div>'
 						+ '	  </div>'
 						+ '	  <div class="function_execution" id="'+prefix+'LicenseIssuer_contract_function_LicenseIssuer_stopIssuing">'
 						+ '	LicenseIssuer_stopIssuing:'
-						+ '		<button class="dapp-block-button"id="'
+						+ '		<button class="dapp-block-button function_button"id="'
 						+ prefix
 						+ 'LicenseIssuerController.LicenseIssuer_stopIssuing" onclick="'
-						+ 'stopIssuing('+index+',\''+prefix +'\')">stopIssuing</button>'
+						+ 'stopIssuing('+index+',\''+prefix +'\')">stop Issuing</button>'
 						+ '		<div class="function_result" id="'+prefix+'LicenseIssuer_stopIssuing_res"></div>'
 						+ '	  </div>';
 			}
@@ -286,12 +298,12 @@
 				if (this.mode !== 'issue'){
 					txt = 	'	  <div class="function_execution" id="'+this.prefix+'LicenseManager_contract_function_LicenseManager_createIssuerContract_string_string_string_uint_uint">'
 					+	'	LicenseManager_createIssuerContract:'
-					+	'		  <div class="function_parameter">itemName<input type="text" id="'+this.prefix+'LicenseManager_createIssuerContract_string_string_string_uint_uint_itemName"></div>'
-					+	'		  <div class="function_parameter">textHash<input type="text" id="'+this.prefix+'LicenseManager_createIssuerContract_string_string_string_uint_uint_textHash"></div>'
-					+	'		  <div class="function_parameter">url<input type="text" id="'+this.prefix+'LicenseManager_createIssuerContract_string_string_string_uint_uint_url"></div>'
-					+	'		  <div class="function_parameter">lifeTime<input type="number" id="'+this.prefix+'LicenseManager_createIssuerContract_string_string_string_uint_uint_lifeTime"></div>'
-					+	'		  <div class="function_parameter">price<input type="number" id="'+this.prefix+'LicenseManager_createIssuerContract_string_string_string_uint_uint_price"></div>'
-					+	'		<button class="dapp-block-button"id="'+this.prefix+'LicenseManagerController.LicenseManager_createIssuerContract_string_string_string_uint_uint" onclick="createIssuerContract(\''+this.prefix +'\')">createIssuerContract</button>'
+					+	'		  <div class="function_parameter row clear "><div class="col col-1-4 function_parameter_name">itemName</div><input class="col col-3-4" type="text" id="'+this.prefix+'LicenseManager_createIssuerContract_string_string_string_uint_uint_itemName"></div>'
+					+	'		  <div class="function_parameter row clear "><div class="col col-1-4 function_parameter_name">textHash</div><input class="col col-3-4" type="text" id="'+this.prefix+'LicenseManager_createIssuerContract_string_string_string_uint_uint_textHash"></div>'
+					+	'		  <div class="function_parameter row clear "><div class="col col-1-4 function_parameter_name">url</div><input class="col col-3-4" type="text" id="'+this.prefix+'LicenseManager_createIssuerContract_string_string_string_uint_uint_url"></div>'
+					+	'		  <div class="function_parameter row clear "><div class="col col-1-4 function_parameter_name">lifeTime</div><input class="col col-3-4" type="number" id="'+this.prefix+'LicenseManager_createIssuerContract_string_string_string_uint_uint_lifeTime"></div>'
+					+	'		  <div class="function_parameter row clear "><div class="col col-1-4 function_parameter_name">price</div><input class="col col-3-4" type="number" id="'+this.prefix+'LicenseManager_createIssuerContract_string_string_string_uint_uint_price"></div>'
+					+	'		<button class="dapp-block-button function_button"id="'+this.prefix+'LicenseManagerController.LicenseManager_createIssuerContract_string_string_string_uint_uint" onclick="createIssuerContract(\''+this.prefix +'\')">create Issuer Contract</button>'
 					+	'		<div class="function_result" id="'+this.prefix+'LicenseManager_createIssuerContract_string_string_string_uint_uint_res"></div>'
 					+	'	  </div>'
 				}
