--- a/licensemanager/mix/contracts.html
+++ b/licensemanager/mix/contracts.html
@@ -10,6 +10,10 @@
 <script type='text/javascript' src="js/contracts-main.js">
 </script>
 
+<!-- Start of user code custom_contracts_scripts --> 
+
+<!-- End of user code -->
+
 <!-- start of style -->
 <style>
 .contract {
@@ -32,153 +36,6 @@
 </head>
 <body bgcolor='#E6E6FA'>
 	<h1>Sample Interface for contracts</h1>
-<!-- gui for LicenseManager_contract -->
-<div class="contract" id="LicenseManager_contract">
-LicenseManager:
-  <input type="text" id="LicenseManager_address"> <button id="LicenseManagerController.setAddress" onclick="LicenseManagerController.setAddress()">change LicenseManager Address</button>
-  <div class="contract_attributes" id="LicenseManager_contract_attributes"> attributes:
-    <div class="contract_attribute" id="LicenseManager_contract_attribute_owner"> owner:
-      <div class="contract_attribute_value" id="LicenseManager_owner_value"> </div>
-    </div>
-    <div class="contract_attribute" id="LicenseManager_contract_attribute_issuerName"> issuerName:
-      <div class="contract_attribute_value" id="LicenseManager_issuerName_value"> </div>
-    </div>
-    <div class="contract_attribute" id="LicenseManager_contract_attribute_contractCount"> contractCount:
-      <div class="contract_attribute_value" id="LicenseManager_contractCount_value"> </div>
-    </div>
-
-<div class="Value_Mapping" id="LicenseManager_contract_attribute_contracts">mapping  contracts:
-		<input type="number" id="LicenseManager_contract_attribute_contracts_input">(uint)
-    	<div class="Mapping_value" id="LicenseManager_contract_attribute_uint"> LicenseIssuer:
-      		<div class="contract_attribute_value" id="LicenseManager_contracts_value"> </div>
-    	</div>
-  </div>
-    <button id="LicenseManager_updateAttributes" onclick="LicenseManagerController._updateAttributes()">update LicenseManager attributes</button>
-  </div>
-  <div class="function_execution" id="LicenseManager_contract_function_LicenseManager_changePaymentAddress_address">
-LicenseManager_changePaymentAddress:
-	  <div class="function_parameter">_newPaymentAdress<input type="text" id="LicenseManager_changePaymentAddress_address__newPaymentAdress"></div>
-	<button id="LicenseManagerController.LicenseManager_changePaymentAddress_address" onclick="LicenseManagerController.LicenseManager_changePaymentAddress_address()">execute LicenseManager_changePaymentAddress</button>
-	<div class="function_result" id="LicenseManager_changePaymentAddress_address_res"></div>
-  </div>
-  <div class="function_execution" id="LicenseManager_contract_function_LicenseManager_createIssuerContract_string_string_string_uint_uint">
-LicenseManager_createIssuerContract:
-	  <div class="function_parameter">itemName<input type="text" id="LicenseManager_createIssuerContract_string_string_string_uint_uint_itemName"></div>
-	  <div class="function_parameter">textHash<input type="text" id="LicenseManager_createIssuerContract_string_string_string_uint_uint_textHash"></div>
-	  <div class="function_parameter">url<input type="text" id="LicenseManager_createIssuerContract_string_string_string_uint_uint_url"></div>
-	  <div class="function_parameter">lifeTime<input type="number" id="LicenseManager_createIssuerContract_string_string_string_uint_uint_lifeTime"></div>
-	  <div class="function_parameter">price<input type="number" id="LicenseManager_createIssuerContract_string_string_string_uint_uint_price"></div>
-	<button id="LicenseManagerController.LicenseManager_createIssuerContract_string_string_string_uint_uint" onclick="LicenseManagerController.LicenseManager_createIssuerContract_string_string_string_uint_uint()">execute LicenseManager_createIssuerContract</button>
-	<div class="function_result" id="LicenseManager_createIssuerContract_string_string_string_uint_uint_res"></div>
-  </div>
-  <div class="function_execution" id="LicenseManager_contract_function_LicenseManager_stopIssuing_uint">
-LicenseManager_stopIssuing:
-	  <div class="function_parameter">licenseId<input type="number" id="LicenseManager_stopIssuing_uint_licenseId"></div>
-	<button id="LicenseManagerController.LicenseManager_stopIssuing_uint" onclick="LicenseManagerController.LicenseManager_stopIssuing_uint()">execute LicenseManager_stopIssuing</button>
-	<div class="function_result" id="LicenseManager_stopIssuing_uint_res"></div>
-  </div>
-  <div class="function_execution" id="LicenseManager_contract_function_LicenseManager_changePaymentAddress_address_uint">
-LicenseManager_changePaymentAddress:
-	  <div class="function_parameter">_newPaymentAddress<input type="text" id="LicenseManager_changePaymentAddress_address_uint__newPaymentAddress"></div>
-	  <div class="function_parameter">licenseId<input type="number" id="LicenseManager_changePaymentAddress_address_uint_licenseId"></div>
-	<button id="LicenseManagerController.LicenseManager_changePaymentAddress_address_uint" onclick="LicenseManagerController.LicenseManager_changePaymentAddress_address_uint()">execute LicenseManager_changePaymentAddress</button>
-	<div class="function_result" id="LicenseManager_changePaymentAddress_address_uint_res"></div>
-  </div>
-
-</div>
-<!-- gui for LicenseIssuer_contract -->
-<div class="contract" id="LicenseIssuer_contract">
-LicenseIssuer:
-  <input type="text" id="LicenseIssuer_address"> <button id="LicenseIssuerController.setAddress" onclick="LicenseIssuerController.setAddress()">change LicenseIssuer Address</button>
-  <div class="contract_attributes" id="LicenseIssuer_contract_attributes"> attributes:
-    <div class="contract_attribute" id="LicenseIssuer_contract_attribute_licensedItemName"> licensedItemName:
-      <div class="contract_attribute_value" id="LicenseIssuer_licensedItemName_value"> </div>
-    </div>
-    <div class="contract_attribute" id="LicenseIssuer_contract_attribute_licenseManager"> licenseManager:
-      <div class="contract_attribute_value" id="LicenseIssuer_licenseManager_value"> </div>
-    </div>
-    <div class="contract_attribute" id="LicenseIssuer_contract_attribute_licenseTextHash"> licenseTextHash:
-      <div class="contract_attribute_value" id="LicenseIssuer_licenseTextHash_value"> </div>
-    </div>
-    <div class="contract_attribute" id="LicenseIssuer_contract_attribute_licenseUrl"> licenseUrl:
-      <div class="contract_attribute_value" id="LicenseIssuer_licenseUrl_value"> </div>
-    </div>
-    <div class="contract_attribute" id="LicenseIssuer_contract_attribute_licencePrice"> licencePrice:
-      <div class="contract_attribute_value" id="LicenseIssuer_licencePrice_value"> </div>
-    </div>
-    <div class="contract_attribute" id="LicenseIssuer_contract_attribute_licenseLifetime"> licenseLifetime:
-      <div class="contract_attribute_value" id="LicenseIssuer_licenseLifetime_value"> </div>
-    </div>
-    <div class="contract_attribute" id="LicenseIssuer_contract_attribute_licenseCount"> licenseCount:
-      <div class="contract_attribute_value" id="LicenseIssuer_licenseCount_value"> </div>
-    </div>
-    <div class="contract_attribute" id="LicenseIssuer_contract_attribute_issuable"> issuable:
-      <div class="contract_attribute_value" id="LicenseIssuer_issuable_value"> </div>
-    </div>
-
-<!--struct -->
-<div class="Struct_Mapping" id="Struc_LicenseIssuer_contract_attribute_issuedLicenses">struc mapping  issuedLicenses:
-		<input type="number" id="LicenseIssuer_contract_attribute_issuedLicenses_input">(uint)
-    	<div class="Struct_attribute" id="LicenseIssuer_contract_attribute_issuedLicenses_licenseOwnerAdress"> licenseOwnerAdress:
-      		<div class="Struct_attribute_value" id="LicenseIssuer_issuedLicenses_licenseOwnerAdress_value"> </div>
-    	</div>
-    	<div class="Struct_attribute" id="LicenseIssuer_contract_attribute_issuedLicenses_licenseOwnerName"> licenseOwnerName:
-      		<div class="Struct_attribute_value" id="LicenseIssuer_issuedLicenses_licenseOwnerName_value"> </div>
-    	</div>
-    	<div class="Struct_attribute" id="LicenseIssuer_contract_attribute_issuedLicenses_issuedDate"> issuedDate:
-      		<div class="Struct_attribute_value" id="LicenseIssuer_issuedLicenses_issuedDate_value"> </div>
-    	</div>
-  </div>
-<!--struct -->
-<div class="Struct_Mapping" id="Struc_LicenseIssuer_contract_attribute_licenseOwners">struc mapping  licenseOwners:
-		<input type="text" id="LicenseIssuer_contract_attribute_licenseOwners_input">(address)
-    	<div class="Struct_attribute" id="LicenseIssuer_contract_attribute_licenseOwners_licenseOwnerAdress"> licenseOwnerAdress:
-      		<div class="Struct_attribute_value" id="LicenseIssuer_licenseOwners_licenseOwnerAdress_value"> </div>
-    	</div>
-    	<div class="Struct_attribute" id="LicenseIssuer_contract_attribute_licenseOwners_licenseOwnerName"> licenseOwnerName:
-      		<div class="Struct_attribute_value" id="LicenseIssuer_licenseOwners_licenseOwnerName_value"> </div>
-    	</div>
-    	<div class="Struct_attribute" id="LicenseIssuer_contract_attribute_licenseOwners_issuedDate"> issuedDate:
-      		<div class="Struct_attribute_value" id="LicenseIssuer_licenseOwners_issuedDate_value"> </div>
-    	</div>
-  </div>
-    <button id="LicenseIssuer_updateAttributes" onclick="LicenseIssuerController._updateAttributes()">update LicenseIssuer attributes</button>
-  </div>
-  <div class="function_execution" id="LicenseIssuer_contract_function_LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32">
-LicenseIssuer_checkLicense:
-	  <div class="function_parameter">factHash<input type="text" id="LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_factHash"></div>
-	  <div class="function_parameter">v<input type="number" id="LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_v"></div>
-	  <div class="function_parameter">sig_r<input type="text" id="LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_sig_r"></div>
-	  <div class="function_parameter">sig_s<input type="text" id="LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_sig_s"></div>
-	<button id="LicenseIssuerController.LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32" onclick="LicenseIssuerController.LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32()">execute LicenseIssuer_checkLicense</button>
-	<div class="function_result" id="LicenseIssuer_checkLicense_bytes32_uint8_bytes32_bytes32_res"></div>
-  </div>
-  <div class="function_execution" id="LicenseIssuer_contract_function_LicenseIssuer_checkLicense_address">
-LicenseIssuer_checkLicense:
-	  <div class="function_parameter">_address<input type="text" id="LicenseIssuer_checkLicense_address__address"></div>
-	<button id="LicenseIssuerController.LicenseIssuer_checkLicense_address" onclick="LicenseIssuerController.LicenseIssuer_checkLicense_address()">execute LicenseIssuer_checkLicense</button>
-	<div class="function_result" id="LicenseIssuer_checkLicense_address_res"></div>
-  </div>
-  <div class="function_execution" id="LicenseIssuer_contract_function_LicenseIssuer_changePaymentAddress_address">
-LicenseIssuer_changePaymentAddress:
-	  <div class="function_parameter">_newPaymentAddress<input type="text" id="LicenseIssuer_changePaymentAddress_address__newPaymentAddress"></div>
-	<button id="LicenseIssuerController.LicenseIssuer_changePaymentAddress_address" onclick="LicenseIssuerController.LicenseIssuer_changePaymentAddress_address()">execute LicenseIssuer_changePaymentAddress</button>
-	<div class="function_result" id="LicenseIssuer_changePaymentAddress_address_res"></div>
-  </div>
-  <div class="function_execution" id="LicenseIssuer_contract_function_LicenseIssuer_stopIssuing">
-LicenseIssuer_stopIssuing:
-	<button id="LicenseIssuerController.LicenseIssuer_stopIssuing" onclick="LicenseIssuerController.LicenseIssuer_stopIssuing()">execute LicenseIssuer_stopIssuing</button>
-	<div class="function_result" id="LicenseIssuer_stopIssuing_res"></div>
-  </div>
-  <div class="function_execution" id="LicenseIssuer_contract_function_LicenseIssuer_buyLicense_address_string">
-LicenseIssuer_buyLicense:
-	  <div class="function_parameter">_address<input type="text" id="LicenseIssuer_buyLicense_address_string__address"></div>
-	  <div class="function_parameter">_name<input type="text" id="LicenseIssuer_buyLicense_address_string__name"></div>
-	<button id="LicenseIssuerController.LicenseIssuer_buyLicense_address_string" onclick="LicenseIssuerController.LicenseIssuer_buyLicense_address_string()">execute LicenseIssuer_buyLicense</button>
-	<div class="function_result" id="LicenseIssuer_buyLicense_address_string_res"></div>
-  </div>
-
-</div>
 <div class="contract">LicenseManager
 <div id="LicenseManager_gui" ></div>
 </div>
@@ -191,51 +48,27 @@ LicenseIssuer_buyLicense:
 <div class="contract">test : LicenseIssuer
 <div id="TestLicenseIssuer_gui" ></div>
 </div>
+<div class="contract">test : contracts
+<div id="Contracts-Gui" ></div>
+</div>
+<div id="eventLog" ></div>
+
+<!-- Start of user code custom_contractshtml --> 
+
+<!-- End of user code -->
+
 
 <script type='text/javascript'>
-var  defaultLicenseManagerController  = new LicenseManagerController();
-defaultLicenseManagerController.bindGui();
 
-LicenseManagerGui  = new LicenseManagerGuiFactory();
-if(contracts['LicenseManager']!=undefined){
-  	defaultLicenseManagerController.LicenseManager_instance = contracts['LicenseManager'].contract;
-  	document.getElementById('LicenseManager_address').value = contracts['LicenseManager'].contract.address; 
-  
-	defaultLicenseManagerController.bindGui();
-	defaultLicenseManagerController._updateAttributes();
-  
-}
-//LicenseManagerGui.placeDefaultGui();
-//var  defaultLicenseManagerModel  = new LicenseManagerModel('Test');
-//defaultLicenseManagerModel.create();
-LicenseManagerGui.prefix='Test';
-LicenseManagerGui.placeDefaultGui();
-testLicenseManagerController  = new LicenseManagerController();
-testLicenseManagerController.prefix='Test';
-testLicenseManagerController.bindGui();
-
-var  defaultLicenseIssuerController  = new LicenseIssuerController();
-defaultLicenseIssuerController.bindGui();
-
-LicenseIssuerGui  = new LicenseIssuerGuiFactory();
-if(contracts['LicenseIssuer']!=undefined){
-  	defaultLicenseIssuerController.LicenseIssuer_instance = contracts['LicenseIssuer'].contract;
-  	document.getElementById('LicenseIssuer_address').value = contracts['LicenseIssuer'].contract.address; 
-  
-	defaultLicenseIssuerController.bindGui();
-	defaultLicenseIssuerController._updateAttributes();
-  
-}
-//LicenseIssuerGui.placeDefaultGui();
-//var  defaultLicenseIssuerModel  = new LicenseIssuerModel('Test');
-//defaultLicenseIssuerModel.create();
-LicenseIssuerGui.prefix='Test';
-LicenseIssuerGui.placeDefaultGui();
-testLicenseIssuerController  = new LicenseIssuerController();
-testLicenseIssuerController.prefix='Test';
-testLicenseIssuerController.bindGui();
+var c = new ContractsPage('Contracts-Gui');
+//Start of user code page_Contracts_js_functions
+		//TODO: implement
+//End of user code
+c.createDefaultGui();
 
 </script>
+
+
 
 </body>
 </html>
